add test files